http://localhost:44376/MentalHealth/PsychologicalEvaluationForms

--- a/TM.RestHour/Views/Shared/_pvActiveInactiveCrew.cshtml
+++ b/TM.RestHour/Views/Shared/_pvActiveInactiveCrew.cshtml
@@ -73,11 +73,13 @@
 
 
             <div class="modal-footer" style="background-color:lightgray;">
-                <div class="col-sm-6">
-                    <button type="button" class="btn btn-info btn-sm " id="btnCancel" data-dismiss="modal" onclick="return Closexyz();">Cancel</button>
-                </div>
-                <div class="col-sm-6" style="border-left:1px solid #312121">
-                    <button type="button" class="btn btn-info btn-sm " id="btnInactivate" onclick="SaveSignOffDate();">Yes</button>
+                <div class="row">
+                    <div class="col-sm-6 col-lg-6">
+                        <button type="button" class="btn btn-info btn-sm " id="btnCancel" data-dismiss="modal" onclick="return Closexyz();">Cancel</button>
+                    </div>
+                    <div class="col-sm-6 col-lg-6" style="border-left:1px solid #312121">
+                        <button type="button" class="btn btn-info btn-sm " id="btnInactivate" onclick="SaveSignOffDate();">Yes</button>
+                    </div>
                 </div>
                 @*<button type="button" class="btn btn-info btn-sm " id="btnCancel" data-dismiss="modal" onclick="return Closexyz();">Cancel</button>*@
                 @*<button type="button" class="btn btn-info btn-sm " id="btnInactivate" onclick="xyz();">Yes</button>*@
