--- a/TM.RestHour/Views/MentalHealth/PsychologicalEvaluationForms.cshtml
+++ b/TM.RestHour/Views/MentalHealth/PsychologicalEvaluationForms.cshtml
@@ -124,59 +124,59 @@
 
                                                 <div class="col-lg-12">
                                                     <div class="form-horizontal">
-                                                        <label class="col-xs-5 control-label">1. LocusOfControl</label>
-                                                        <button type="button" class="button1 savebtn" id="btnShow" onclick="return SaveOvertimeCalculation();" style="width:138px;">View</button>
+                                                        <label class="col-xs-5 control-label">1. Locus Of Control</label>
+                                                        <button type="button" class="button1 savebtn" id="btnShow" data-toggle="modal" data-target="#myModalFor_pvLocusOfControl" style="width:138px;">View</button>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-12">
                                                     <div class="form-horizontal">
-                                                        <label class="col-xs-5 control-label">1. LocusOfControl</label>
-                                                        <button type="button" class="button1 savebtn" id="btnShow" onclick="return SaveOvertimeCalculation();" style="width:138px;">View</button>
+                                                        <label class="col-xs-5 control-label">2. MASS Mindfulness Scale Final</label>
+                                                        <button type="button" class="button1 savebtn" id="btnShow" data-toggle="modal" data-target="#myModalFor_pvMASSMindfulnessScaleFinal" style="width:138px;">View</button>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-12">
                                                     <div class="form-horizontal">
-                                                        <label class="col-xs-5 control-label">1. LocusOfControl</label>
-                                                        <button type="button" class="button1 savebtn" id="btnShow" onclick="return SaveOvertimeCalculation();" style="width:138px;">View</button>
+                                                        <label class="col-xs-5 control-label">3. PSQ30 PERCIEVED STRESS</label>
+                                                        <button type="button" class="button1 savebtn" id="btnShow" data-toggle="modal" data-target="#myModalFor_pvPSQ30_PERCIEVED_STRESS_QUESTIONAIRE" style="width:138px;">View</button>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-12">
                                                     <div class="form-horizontal">
-                                                        <label class="col-xs-5 control-label">1. LocusOfControl</label>
-                                                        <button type="button" class="button1 savebtn" id="btnShow" onclick="return SaveOvertimeCalculation();" style="width:138px;">View</button>
+                                                        <label class="col-xs-5 control-label">4. Beck Depression Inventory </label>
+                                                        <button type="button" class="button1 savebtn" id="btnShow" data-toggle="modal" data-target="#myModalFor_pvBeckDepressionInventoryIIFinal" style="width:138px;">View</button>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-12">
                                                     <div class="form-horizontal">
-                                                        <label class="col-xs-5 control-label">1. LocusOfControl</label>
-                                                        <button type="button" class="button1 savebtn" id="btnShow" onclick="return SaveOvertimeCalculation();" style="width:138px;">View</button>
+                                                        <label class="col-xs-5 control-label">5. Zhao ANXIETY Y1</label>
+                                                        <button type="button" class="button1 savebtn" id="btnShow" data-toggle="modal" data-target="#myModalFor_pvZhao_ANXIETY_Y1" style="width:138px;">View</button>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-12">
                                                     <div class="form-horizontal">
-                                                        <label class="col-xs-5 control-label">1. LocusOfControl</label>
-                                                        <button type="button" class="button1 savebtn" id="btnShow" onclick="return SaveOvertimeCalculation();" style="width:138px;">View</button>
+                                                        <label class="col-xs-5 control-label">6. Zhao ANXIETY Y2</label>
+                                                        <button type="button" class="button1 savebtn" id="btnShow" data-toggle="modal" data-target="#myModalFor_pvZhao_ANXIETY_Y2" style="width:138px;">View</button>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-12">
                                                     <div class="form-horizontal">
-                                                        <label class="col-xs-5 control-label">1. LocusOfControl</label>
-                                                        <button type="button" class="button1 savebtn" id="btnShow" onclick="return SaveOvertimeCalculation();" style="width:138px;">View</button>
+                                                        <label class="col-xs-5 control-label">7. ROSENBERG SELF esteem</label>
+                                                        <button type="button" class="button1 savebtn" id="btnShow" data-toggle="modal" data-target="#myModalFor_pvROSENBERG_SELF_esteem_scale_final" style="width:138px;">View</button>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-12">
                                                     <div class="form-horizontal">
-                                                        <label class="col-xs-5 control-label">1. LocusOfControl</label>
-                                                        <button type="button" class="button1 savebtn" id="btnShow" onclick="return SaveOvertimeCalculation();" style="width:138px;">View</button>
+                                                        <label class="col-xs-5 control-label">8. Emotional Intelligence Quiz</label>
+                                                        <button type="button" class="button1 savebtn" id="btnShow" data-toggle="modal" data-target="#myModalFor_pvEmotionalIntelligenceQuizForLeadership" style="width:138px;">View</button>
                                                     </div>
                                                 </div>
 
                                                 @*<div class="col-sm-3" style="width: 63%;">
-            <div class="form-horizontal">
-                <label class="col-xs-5 control-label">SecureKey:</label>
-                <input type="text" class="form-control" id="SecureKey" placeholder="SecureKey" />
-            </div>
-        </div>*@
+                    <div class="form-horizontal">
+                        <label class="col-xs-5 control-label">SecureKey:</label>
+                        <input type="text" class="form-control" id="SecureKey" placeholder="SecureKey" />
+                    </div>
+                </div>*@
 
 
                                                 <div class="form-group">
@@ -187,9 +187,94 @@
 
                                         </div>
 
+
+
+
+
+
+
+
+
+                                        @*////////////////////////////////////// modal for all PsychologicalEvaluationForms /////////////////////////////////////////////////////*@
+                                        <div class="modal fade" id="myModalFor_pvLocusOfControl" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog" style="width: 900px;">
+                                                <div class="modal-content">
+                                                    @*@Html.Partial("_pvLocusOfControl")*@
+                                                    @{Html.RenderPartial("_pvLocusOfControl", new { CrewId = 42, JoiningCondition = 1 });}
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="modal fade" id="myModalFor_pvMASSMindfulnessScaleFinal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog" style="width: 900px;">
+                                                <div class="modal-content">
+                                                    @Html.Partial("_pvMASSMindfulnessScaleFinal")
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="modal fade" id="myModalFor_pvPSQ30_PERCIEVED_STRESS_QUESTIONAIRE" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog" style="width: 900px;">
+                                                <div class="modal-content">
+                                                    @Html.Partial("_pvPSQ30_PERCIEVED_STRESS_QUESTIONAIRE")
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="modal fade" id="myModalFor_pvBeckDepressionInventoryIIFinal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog" style="width: 900px;">
+                                                <div class="modal-content">
+                                                    @Html.Partial("_pvBeckDepressionInventoryIIFinal")
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="modal fade" id="myModalFor_pvZhao_ANXIETY_Y1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog" style="width: 900px;">
+                                                <div class="modal-content">
+                                                    @Html.Partial("_pvZhao_ANXIETY_Y1")
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="modal fade" id="myModalFor_pvZhao_ANXIETY_Y2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog" style="width: 900px;">
+                                                <div class="modal-content">
+                                                    @Html.Partial("_pvZhao_ANXIETY_Y2")
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="modal fade" id="myModalFor_pvROSENBERG_SELF_esteem_scale_final" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog" style="width: 900px;">
+                                                <div class="modal-content">
+                                                    @Html.Partial("_pvROSENBERG_SELF_esteem_scale_final")
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="modal fade" id="myModalFor_pvEmotionalIntelligenceQuizForLeadership" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog" style="width: 900px;">
+                                                <div class="modal-content">
+                                                    @Html.Partial("_pvEmotionalIntelligenceQuizForLeadership")
+                                                </div>
+                                            </div>
+                                        </div>
+                                        @*///////////////////////////////////////////////////////////////////////////////////////////*@
+
+
+
+
+
+
+
+
+
+
+
                                         <div class="modal-footer" style="width: 145%;">
                                             @*<button type="button" class="button1" id="btnNext" onclick="return SaveInitialShipValues();" style="width:86px;">Next</button>
-                                                <button type="button" class="button1" id="btnAdd" onclick="return GetCompanyDetailsByID();" style="width:86px;">Get Details</button>*@
+            <button type="button" class="button1" id="btnAdd" onclick="return GetCompanyDetailsByID();" style="width:86px;">Get Details</button>*@
                                         </div>
 
                                     </form>
