--- a/TM.RestHour/Views/Rights/Index.cshtml
+++ b/TM.RestHour/Views/Rights/Index.cshtml
@@ -60,15 +60,17 @@
                                             <div class="form-group">
                                                 <label for="selectCrew">Crew</label>
                                                 @*@Html.HiddenFor(model => model.Crew.ID, new { id = "hdnCrewId", value = Model.Crew.ID })*@
-                                                    @Html.DropDownListFor(model => model.CrewId, (IEnumerable<SelectListItem>)ViewBag.Crew, "Select", new { @class = "form-control", @id = "ddlCrew" , @disabled = "true" })
-                                           
-                                            <label for="PageName">Page</label>
-                                                @*<input id="PageName" type="text" class="searchTerm" placeholder="Search....">*@
-                                                @Html.TextBoxFor(m => m.PageName, new { @class = "searchTerm" })
+                                                @Html.DropDownListFor(model => model.CrewId, (IEnumerable<SelectListItem>)ViewBag.Crew, "Select", new { @class = "form-control", @id = "ddlCrew", @disabled = "true" })
+
+                                               
                                             </div>
                                         </div>
-
-                                        <div class="col-sm-4 col-xs-12">
+                                        <div class="col-sm-3 col-xs-12">
+                                            <label for="PageName">Page</label>
+                                            @*<input id="PageName" type="text" class="searchTerm" placeholder="Search....">*@
+                                            @Html.TextBoxFor(m => m.PageName, new { @class = "searchTerm form-control" })
+                                        </div>
+                                        <div class="col-sm-5 col-xs-12">
                                             <div class="text-right pull-right mrTP-30">
                                                 <div class="">
                                                     <div class="pull-right" id="sideform">
@@ -82,7 +84,7 @@
                                         </div>
 
                                     </div>
-                                </form>
+</form>
                             </div>
                         </div>
                     </div>
