--- a/TM.RestHour/Views/Shared/_pvLocusOfControl.cshtml
+++ b/TM.RestHour/Views/Shared/_pvLocusOfControl.cshtml
@@ -380,11 +380,21 @@
         $(document).ready(function () {
 
             //SetUpGrid();
+            var thequerystring = getParameterByName("CrewId");
+            console.log(thequerystring);
 
         });
 
 
-
+        function getParameterByName(name, url) {
+            if (!url) url = window.location.href;
+            name = name.replace(/[\[\]]/g, "\\$&");
+            var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+                results = regex.exec(url);
+            if (!results) return null;
+            if (!results[2]) return '';
+            return decodeURIComponent(results[2].replace(/\+/g, " "));
+        }
 
 
         function printDiv(divName) {
