--- a/TM.RestHour/Views/MentalHealth/PsychologicalEvaluationForms.cshtml
+++ b/TM.RestHour/Views/MentalHealth/PsychologicalEvaluationForms.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
+<script src="~/Scripts/jquery-3.6.0.min.js"></script>
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="../css/bootstrap.min.css" />
 
@@ -14,7 +14,7 @@
 
 @*<link href="dist/dual-listbox.css" rel="stylesheet">*@
 
-<script src="~/Scripts/jquery-3.6.0.min.js"></script>
+
 <script src="~/Scripts/notify.min.js"></script>
 
 <script src="~/Scripts/toastr.min.js"></script>
@@ -110,7 +110,8 @@
                                                         <label class="col-xs-5 control-label">1. Locus Of Control</label>
                                                         @*<button type="button" class="button1 savebtn" id="btnShow" data-toggle="modal" data-target="#myModalFor_pvLocusOfControl" style="width:138px;">View</button>*@
                                                         @*<button type="button" class="button1 savebtn" id="btnShowL" style="width:138px;">View</button>*@
-                                                        <button type="button" class="button1 savebtn" id="btnShowL" style="width:138px;">View</button>
+                                                        @*<button type="button" class="button1 savebtn" id="btnShowL" style="width:138px;">View</button>*@
+                                                        <button type="button" class="button1 savebtn" id="btnShowL" data-toggle="modal" data-url="@Url.Action("_pvLocusOfControl", "PsychologicalEvaluation")" style="width:138px;">View</button>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-12">
@@ -193,7 +194,12 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="createAssetModal" tabindex="-1" role="dialog" aria-labelledby="CreateAssetModal" aria-hidden="true" data-backdrop="static">
+    <div id="createAssetContainer">
+    </div>
 
+    
+</div>
 
 
 
@@ -312,20 +318,24 @@
             GetCompanyDetailsNew();
 
 
-            var url = '@Url.Action("_pvLocusOfControl", "PsychologicalEvaluation")'; //
+            @*var url = '@Url.Action("_pvLocusOfControl", "PsychologicalEvaluation")'; //
             $('#btnShowL').click(function () {
                 //var keyWord = $('#Keyword').val();
                 $('#viewresults').load(url); //load(url, { searchText: keyWord })
-            });
+            });*@
 
             $('#btnShowL').click(function () {
                 id = 42;
+                var url = $(this).data("url");
                 $.get("@Url.Action("_pvLocusOfControl", "PsychologicalEvaluation")/" + id,
                     function (data) {
-                        $('.modal-body').html(data);
+                        //$('.modal-body').html(data);
+                        $('#createAssetContainer').html(data);
+
+                        //$('#createAssetModal').modal('show');
                     });
 
-                $("#myModal").modal("show");
+                $("#createAssetModal").modal("show");
             });
         });
 
