--- a/TM.RestHour/Views/Shared/_pvLocusOfControl.cshtml
+++ b/TM.RestHour/Views/Shared/_pvLocusOfControl.cshtml
@@ -2,26 +2,15 @@
 @{
     ViewBag.Title = "LocusOfControl";
 }
-
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="../css/bootstrap.min.css" />
-
-<!-- style CSS -->
-<link rel="stylesheet" href="../css/style.css" />
-<link rel="stylesheet" href="../css/colors/default.css" id="colorSkinCSS">
-
-<link href="dist/dual-listbox.css" rel="stylesheet">
-
 <script src="~/Scripts/jquery-3.6.0.min.js"></script>
-<script src="~/Scripts/notify.min.js"></script>
-
-<script src="~/Scripts/toastr.min.js"></script>
-<link href="~/Content/toastr.min.css" rel="stylesheet" />
-
 <script src="~/Scripts/jquery-ui-1.13.0.min.js"></script>
 <link href="~/Content/jquery-ui.css" rel="stylesheet" />
-
-
+<script src="~/Scripts/notify.min.js"></script>
+<link rel="stylesheet" href="../css/bootstrap.min.css" />
+<link rel="stylesheet" href="../css/style.css" />
+<link rel="stylesheet" href="../css/colors/default.css" id="colorSkinCSS">
+<script src="~/Scripts/toastr.min.js"></script>
+<link href="~/Content/toastr.min.css" rel="stylesheet" />
 <script src="~/Scripts/PsychologicalEvaluation.js"></script>
 
 @Html.Hidden("SaveForms", @Url.Action("SaveForms", "PsychologicalEvaluation"))
@@ -307,54 +296,14 @@
                                 </p>
                             </td>
                         </tr>
-                        @*<tr style="height:30.1pt;">
-            <td style="border-top:1pt solid #000000;border-bottom:1pt solid #000000;border-left:1pt solid #000000;border-right:1pt solid #000000;padding-left:5pt;padding-right:5pt;padding-top:5pt;padding-bottom:5pt;width:341.5pt;vertical-align:top;">
-                <p style="margin-left:6.25pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;">
-                    <span style="font-family:Arial;font-size:15.5pt;">SCORE </span>
-                </p>
-            </td>
-            <td style="border-top:1pt solid #000000;border-bottom:1pt solid #000000;border-left:1pt solid #000000;border-right:1pt solid #000000;padding-left:5pt;padding-right:5pt;padding-top:5pt;padding-bottom:5pt;width:75.4pt;vertical-align:top;">
-                <p style="margin-left:0pt;margin-right:0pt;line-height:115%;font-size:15.5pt;margin-top:0pt;margin-bottom:0pt;">
-                    <span>&nbsp;</span>
-                </p>
-            </td>
-            <td style="border-top:1pt solid #000000;border-bottom:1pt solid #000000;border-left:1pt solid #000000;border-right:1pt solid #000000;padding-left:5pt;padding-right:5pt;padding-top:5pt;padding-bottom:5pt;width:67.45pt;vertical-align:top;">
-                <p style="margin-left:0pt;margin-right:0pt;line-height:115%;font-size:15.5pt;margin-top:0pt;margin-bottom:0pt;">
-                    <span>&nbsp;</span>
-                </p>
-            </td>
-        </tr>*@
-                    </table>
-                    @*<p style="margin-left:0pt;margin-right:0pt;line-height:115%;font-size:11pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                            <span>&nbsp;</span>
-                        </p>
-                        <p style="margin-left:0pt;margin-right:0pt;line-height:115%;font-size:11pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                            <span>&nbsp;</span>
-                        </p>
-                        <p style="margin-left:5.7pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                            <span style="font-family:Times;font-size:11.5pt;">This is an abbreviated version of the Nicholson McBride Resilience Questionnaire (NMRQ).</span>
-                        </p>
-                        <p style="margin-left:6.45pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                            <span style="font-family:Arial;font-size:15.5pt;font-weight: bold;">Interpreting your score </span>
-                        </p>
-                        <p style="margin-left:6.4pt;text-indent:0.15000000000000002pt;margin-right:0pt;line-height:191.67%;font-size:11.5pt;margin-top:13.3pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                            <span style="font-family:Arial;font-size:11.5pt;">For questions 2,4,6,9 and 10, score two points for every ‘yes’ and ‘zero’ for ‘no’. &nbsp;For questions 1,3,5,7and 8 score ‘two’ points for every ‘no’ and ‘zero’ for ‘yes’ answer. &nbsp;Now calculate your score for each column, then add these together. &nbsp;</span>
-                        </p>
-                        <p style="margin-left:5.550000000000001pt;text-indent:0.15000000000000002pt;margin-right:24.200000000000003pt;line-height:95.83%;font-size:11.5pt;margin-top:2.5pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                            <span style="font-family:Arial;font-size:11.5pt;">The maximum total score is 20, and the higher your score the greater the extent to which you would take control of your life. &nbsp;</span>
-                        </p>
-                        <p style="margin-left:5.7pt;margin-right:0pt;margin-top:13.700000000000001pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                            <span style="font-family:Arial;font-size:11.5pt;">Any score of 14 or above would suggest you have an internal focus of control. &nbsp;</span>
-                        </p>
-                        <p style="margin-left:6.300000000000001pt;text-indent:-0.25pt;margin-right:21pt;line-height:95.83%;font-size:11.5pt;margin-top:13.25pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                            <span style="font-family:Arial;font-size:11.5pt;">Scoring below 14 suggests that you need to get a firmer grip on things; such a score may well indicate an external locus of control. </span>
-                        </p>*@
+
                 </section>
 
                 <div class="col-md-3" style="padding: 10px; margin-top:68px;">
                     <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveLocusOfControl', '1');">Save And Next</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
-
+                
             </div>
         </div>
     </div>
