--- a/TM.RestHour/Views/Shared/_pvPatientDetails2.cshtml
+++ b/TM.RestHour/Views/Shared/_pvPatientDetails2.cshtml
@@ -1034,6 +1034,59 @@
                         <div class="uploadbtn">
                             <a href="#">Upload photo</a>
                         </div>
+
+                        <div class="modal fade" id="myModalAccidentOrIllness" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" style="width:890px;">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <h4 class="modal-title" id="myModalLabel">Photo Upload</h4>
+                                    </div>
+
+                                    <div class="card-body" id="dvuserdetailsn" style="width: 802px;">
+
+                                        <fieldset class="for-panel">
+                                            <legend>Upload</legend>
+                                            <div class="row">
+
+                                                <div class="col-sm-3" style="width: 63%;">
+                                                    <div class="form-group">
+                                                        <label class="col-xs-5 control-label">Photo:</label>
+
+                                                    </div>
+                                                </div>
+
+                                                @*////////////////////////////////Dheeman da///////////////////////////////////////////////////////*@
+                                                <input id="uploadCIRMAccidentOrIllnessImage" name="upload" type="file" accept="image/gif, image/png,image/jpeg" />
+                                                @*<button type="button" class="buttonpop" onclick="  uploadFile($('#upload'));" style="width:86px;">Upload</button>*@
+                                                <button type="button" class="buttonpop" onclick="  UploadCIRMFile('uploadCIRMAccidentOrIllnessImage','AccidentOrIllness');" style="width:86px;">Upload</button>
+
+
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+
+                                                <div class="form-group">
+                                                    <input type="hidden" id="PhotoUploadID" class="form-control" />
+                                                    <input type="hidden" id="hdnPathCIRMAccidentOrIllness" value="" />
+                                                </div>
+
+                                            </div>
+                                        </fieldset>
+                                    </div>
+
+                                    <div class="modal-footer">
+                                        <label class="hidden" id="lblSuccMsgCIRMAccidentOrIllness"></label>
+                                        @*<button type="button" class="buttonpop" id="btnAdd" onclick="return Add();" style="width:86px;">Add</button>*@
+                                        @*<button type="button" class="buttonpop" id="btnUpdate" style="display:none; width:86px;" onclick="Add();">Update</button>*@
+                                        <button type="button" class="btn btn-default" data-dismiss="modal" style="width:86px;">Close</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
