--- a/TM.RestHour/Views/MentalHealth/PsychologicalEvaluationForms.cshtml
+++ b/TM.RestHour/Views/MentalHealth/PsychologicalEvaluationForms.cshtml
@@ -45,8 +45,8 @@
 <body>
 
     <div class="">
-        <div class="head_title">
-            <h1>Mental Health</h1>
+        <div class="head_title arrowimg">
+          <span class="title-arrow"><img src="../img/arrow.png" /></span>  <h1><img src="../img/brein.png" /> Mental Health</h1>
         </div>
         <div class="">
 
@@ -78,11 +78,11 @@
 
                         <div class="col-md-12">
                             <h3 style="margin-top: 0px;" align="center"></h3>
-                            <div align="">
+                            <div>
                                 <div class="modal-body">
                                     <form>
                                         @*////////////// Owner /////////////*@
-                                        <div class="card">
+                                        <div class="card psychologicalef">
                                             <h1>Psychological Evaluation</h1>
                                             <div class="row">
 
@@ -109,14 +109,15 @@
 
 
                                                 <div class="col-lg-12">
+                                                    
                                                     <div class="form-horizontal">
-                                                        <label class="col-xs-5 control-label">1. Locus Of Control</label>
+                                                        <label class="control-label">1. Locus Of Control</label>
                                                         <button type="button" class="button1 savebtn" id="btnShowL" style="width:138px;">View</button>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-12">
                                                     <div class="form-horizontal">
-                                                        <label class="col-xs-5 control-label">2. MASS Mindfulness Scale Final</label>
+                                                        <label class="control-label">2. MASS Mindfulness Scale Final</label>
                                                         <button type="button" class="button1 savebtn" id="btnShowM" style="width:138px;">View</button>
                                                     </div>
                                                 </div>
