--- a/TM.RestHour/Views/Shared/_LayoutEmpty.cshtml
+++ b/TM.RestHour/Views/Shared/_LayoutEmpty.cshtml
@@ -22,7 +22,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryui")
-    @Scripts.Render("~/bundles/bootstrap")
+    @*@Scripts.Render("~/bundles/bootstrap")*@
     @Styles.Render("~/Content/datatables")
     @Scripts.Render("~/bundles/datatables")
     @Scripts.Render("~/bundles/multiselect")
