--- a/TM.RestHour/Views/CrewHealth/VesselDetails.cshtml
+++ b/TM.RestHour/Views/CrewHealth/VesselDetails.cshtml
@@ -80,7 +80,7 @@
     <div class="vessel-detl">
 
         <div class="head_title">
-            <h1 class="ta">CIRM - Vessel Details</h1>
+            <h1 class="ta">Vessel Details</h1>
         </div>
         <div class="card">
             <div class="row">
@@ -173,9 +173,7 @@
                         <input type="text" class="form-control" id="VOIP1" placeholder="VOIP1" disabled />
                         <input type="text" class="form-control" id="VOIP2" placeholder="VOIP2" disabled />
                     </div>
-                    <div class="addbtn">
-                        <button type="button" class="button1" id="btnAdd" onclick="return SaveVesselDetails();">Add</button>
-                    </div>
+                  
                 </div>
                 <div class="col-lg-4">
                     <div class="form-group">
@@ -231,9 +229,6 @@
                                 <label for="P And I Club Other">Other P&I Club</label>
                                 <textarea type="text" class="form-control" id="PAndIClubOther" placeholder="Other P&I Club"></textarea>
                             </div>
-                            <div class="addbtn">
-                                <button type="button" class="button1">Save</button>
-                            </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="form-group">
@@ -241,7 +236,7 @@
                                 <textarea type="text" class="form-control" id="ContactDetails" placeholder="Contact Details"></textarea>
                             </div>
                             <div class="addbtn">
-                                <button type="button" class="button1">Save</button>
+                                <button type="button" class="button1" id="btnAdd" onclick="return SaveVesselDetails();">Save</button>
                             </div>
                         </div>
 
