--- a/TM.RestHour/Views/PsychologicalEvaluation/BeckDepressionInventoryIIFinal.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/BeckDepressionInventoryIIFinal.cshtml
@@ -38,7 +38,7 @@
         @*<div class="head_title">
                 <h1 class="ta">Page Name</h1>
             </div>*@
-        <div class="card bacmt" style="height: 600px;">
+        <div class="card bacmt">
             <div class="clearfix"></div>
             <div class="row">
 
@@ -882,7 +882,7 @@
 
 
 
-                <div class="col-md-3" style="padding: 10px; margin-top:68px;">
+                <div class="col-md-6" style=" margin-top:30px;">
                     <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveBeck_Depression_Inventory_IIFinal', '4');">Save And Next</button>
                     @if (Model.Mode == "redirect")
                     {
