--- a/TM.RestHour/Views/PsychologicalEvaluation/ROSENBERG_SELF_esteem_scale_final.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/ROSENBERG_SELF_esteem_scale_final.cshtml
@@ -39,7 +39,7 @@
         @*<div class="head_title">
                 <h1 class="ta">Page Name</h1>
             </div>*@
-        <div class="card bacmt" style="height: 600px;">
+        <div class="card bacmt">
             <div class="clearfix"></div>
             <div class="row">
 
@@ -49,7 +49,7 @@
 
 
 
-                    <p style="margin-left:112.45pt;margin-right:0pt;margin-top:0.9500000000000001pt;margin-bottom:0pt;padding: 1pt 4pt;">
+                    <p style="text-align:center;margin-top:0.9500000000000001pt;margin-bottom:0pt;padding: 1pt 4pt;">
                         <span style="font-family:Century Schoolbook;font-size:18pt;letter-spacing:-0.05pt;">ROSENBERG</span>
                         <span style="font-family:Century Schoolbook;font-size:18pt;"> SELF-ESTEEM</span>
                         <span style="font-family:Century Schoolbook;font-size:18pt;letter-spacing:-0.1pt;"> </span>
@@ -786,7 +786,7 @@
 
 
 
-                <div class="col-md-3" style="padding: 10px; margin-top:68px;">
+                <div class="col-md-6" style=" margin-top:30px;">
                     <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveROSENBERG_SELF_Esteem_scale_final', '6');">Save And Next</button>
                     @if (Model.Mode == "redirect")
                     {
