--- a/TM.RestHour/Views/PsychologicalEvaluation/Zhao_ANXIETY_Y1.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/Zhao_ANXIETY_Y1.cshtml
@@ -39,23 +39,23 @@
         @*<div class="head_title">
                 <h1 class="ta">Page Name</h1>
             </div>*@
-        <div class="card bacmt" style="height: 600px;">
+        <div class="card bacmt">
             <div class="clearfix"></div>
             <div class="row">
 
 
-                <section id="print-content">
+                <section id="print-content" class="side-space">
                     <input type="button" onclick="printDiv('print-content')" value="print a div!" />
 
 
 
-                    <p style="text-align:center;margin-left:0pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
+                    <p style="text-align:center;padding: 1pt 4pt;">
                         <span style="font-family:Arial;font-size:12pt;font-weight: bold;letter-spacing:-0.1pt;">SELF-EVALUATION QUESTIONNAIRE</span>
                     </p>
-                    <p style="text-align:center;margin-left:0pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
+                    <p style="text-align:center;padding: 1pt 4pt;">
                         <span style="font-family:Arial;font-size:12pt;font-weight: bold;letter-spacing:-0.1pt;">STAI Form Y-1</span>
                     </p>
-                    <p style="margin-left:0pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
+                    <p style="padding: 1pt 4pt;">
                         <span style="font-family:Arial;font-size:12pt;font-weight: bold;letter-spacing:-0.1pt;">Please provide the following information:</span>
                     </p>
                     <p style="margin-left:0pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
@@ -261,25 +261,7 @@
                     <p style="margin-left:0pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
                         <span>&nbsp;</span>
                     </p>
-                    <p style="margin-left:0pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                        <span>&nbsp;</span>
-                    </p>
-                    <p style="margin-left:0pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                        <span>&nbsp;</span>
-                    </p>
-                    <p style="margin-left:0pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                        <span>&nbsp;</span>
-                    </p>
-
-
-
-
-
-
-
-
-
-
+                   
                     @*<p style="text-align:center;margin-left:0pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
                             <span style="font-family:Arial;font-size:12pt;font-weight: bold;letter-spacing:-0.1pt;">STAI Form Y-2</span>
                         </p>
@@ -957,7 +939,7 @@
 
 
 
-                <div class="col-md-3" style="padding: 10px; margin-top:68px;">
+                <div class="col-md-6" style="margin-top:30px;">
                     <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveZhaoANXIETY_Y1', '7');">Save And Next</button>
                     @if (Model.Mode == "redirect")
                     {
