PsychologicalEvaluationScore bug fixed

--- a/TM.RestHour/Views/Home/Index.cshtml
+++ b/TM.RestHour/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="@Url.Action("MentalHealth", "Health")" style="border:none;">
+                <a href="@Url.Action("MentalHealthReport", "MentalHealth")" style="border:none;">
                     <div class="pull-left mr-20 mobileBox">
                         <div class="green_Color color_box">
                             <img src="../img/menu-icon/health_Mental.png" />
