few modification on CIRM/Medivac/Tele/Visit(pdetails2) create new Plan(poco,mdl,VM,dal,bl, ctrl,js,html, sps)

--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -209,7 +209,7 @@
             </li>
 
             <li class="">
-                <a class = "@(AccessControl.CheckResourceReadAccess("Plan") ? "active" : "disabled")" href="@Url.Action("Index", "Plans" )" aria-expanded="false">
+                <a class = "@(AccessControl.CheckResourceReadAccess("Plan") ? "active" : "disabled")" href="@Url.Action("Index", "Plan" )" aria-expanded="false">
                     <div class="nav_icon_small">
                         <img src="../img/menu-icon/icon_Regime.png" alt="">
                     </div>
