--- a/TM.RestHour/Views/Shared/_pvVesselDetails.cshtml
+++ b/TM.RestHour/Views/Shared/_pvVesselDetails.cshtml
@@ -34,11 +34,11 @@
             <label for="Speed">Speed (in knots)</label>
             <input type="text" class="form-control" id="Speed" placeholder="Speed (in knots)" />
         </div>*@
-        <div class="form-group">
+        <div class="form-group" id="dvCallSign">
             <label for="Call Sign">Radio Call Sign</label>
             <input type="text" class="form-control" id="CallSign" placeholder="Radio Call Sign" />
         </div>
-        <div class="form-group">
+        <div class="form-group" id="dvLength">
             <label for="Length">Length</label>
             <input type="text" class="form-control" id="Length" placeholder="Length" />
         </div>
@@ -51,13 +51,13 @@
         </div>
         <div class="form-group">
             <label for="Flag">Flag</label>
-            <input type="text" class="form-control" id="Flag" placeholder="Flag Of Ship" />
+            <input type="text" class="form-control" id="FlagOfShip" placeholder="Flag Of Ship" />
         </div>
-        <div class="form-group">
+        <div class="form-group" id="dvPortOfRegistry">
             <label for="PortOfRegistry">Port of Registry</label>
             <input type="text" class="form-control" id="PortOfRegistry" placeholder="Port of Registry" />
         </div>
-        <div class="form-group">
+        <div class="form-group" id="dvBreadth">
             <label for="Breadth">Breadth</label>
             <input type="text" class="form-control" id="Breadth" placeholder="Breadth" />
         </div>
@@ -91,11 +91,11 @@
             <label for="EstimatedTimeOfArrival">Estimated Time Of Arrival (hrs)</label>
             <input type="text" class="form-control" id="EstimatedTimeOfArrival" placeholder="Estimated Time Of Arrival (hrs)" />
         </div>*@
-        <div class="form-group">
+        <div class="form-group" id="dvHelicopterDeck">
             <label for="Helicopter Deck">Helicopter Deck</label>
             <input type="text" class="form-control" id="HelicopterDeck" placeholder="Helicopter Deck" />
         </div>
-        <div class="form-group">
+        <div class="form-group" id="dvHelicopterWinchingArea">
             <label for="Helicopter Winching Area">Helicopter Winching Area</label>
             <input type="text" class="form-control" id="HelicopterWinchingArea" placeholder="Helicopter Winching Area" />
         </div>
