--- a/TM.RestHour/Views/MedicalAssistance/CIRM.cshtml
+++ b/TM.RestHour/Views/MedicalAssistance/CIRM.cshtml
@@ -32,12 +32,14 @@
 <script src="~/Scripts/jquery-ui-1.13.0.min.js"></script>
 <link href="~/Content/jquery-ui.css" rel="stylesheet" />
 
-<h2>CIRM</h2>
+@*<h2>CIRM</h2>*@
 
 <div class="">
     <div class="head_title">
-        <h1 class="ta">CIRM - Patient Details</h1>
+        @*<h1 class="ta">CIRM - Patient Details</h1>*@
+        <h1 class="ta">CIRM</h1>
         <input type="hidden" id="CIRMId" />
+        <input type="hidden" id="hdnPageName" value="CIRM" />
     </div>
     <div class="card bac">
         <div class="row">
@@ -95,14 +97,20 @@
                             <div class="col-sm-12 col-xs-12 imo">
                                 <div class="">
                                     @*@Html.Partial("_pvPatientDetails")*@
-                                    @Html.Partial("_pvPatientDetails1")
+                                    <div id="dvPatientDetailsPage1">
+                                        @Html.Partial("_pvPatientDetails1")
 
-                                    @Html.Partial("_pvPatientDetails2")
+                                    </div>
+                                    <div id="dvPatientDetailsPage2" style="display:none">
+
+                                        @Html.Partial("_pvPatientDetails2")
+                                    </div>
+
 
                                     <div class="row" style="border: 1px solid #eee; padding: 10px;">
 
                                         <div class="col-md-4">
-                                            <div class="col-md-3" style="padding: 10px; margin-top:68px;" >
+                                            <div class="col-md-3" style="padding: 10px; margin-top:68px;">
                                                 <button type="button" class="button1" id="btnAdd" onclick="return SaveCIRMNew('CIRM');">Add</button>
                                             </div>
                                         </div>
@@ -112,7 +120,7 @@
                                                 <label for="Email"></label>
                                                 <input type="text" class="form-control" style="width:90%;" id="Email" placeholder="Enter the Email for Doctors / Hospitals" />
                                             </div>
-                                            <button type="button" class="button1" id="" onclick="SendMail()">Send</button>
+                                            <button type="button" class="button1" id="" onclick="SendMail3()">Send</button>
                                         </div>
 
                                     </div>
