--- a/TM.RestHour/Views/MedicalAssistance/MediVac.cshtml
+++ b/TM.RestHour/Views/MedicalAssistance/MediVac.cshtml
@@ -38,60 +38,69 @@
     <div class="head_title">
         <h1 class="ta">Medivac</h1>
         <input type="hidden" id="CIRMId" />
+        <input type="hidden" id="hdnPageName" value="Medivac" />
     </div>
-    <ul class="container--tabs">
-        <li class="tab tabs--active">Vessel Details</li>
-        <li class="tab">Voyage Details</li>
-        <li class="tab">Weather Details</li>
-        <li class="tab">Patient Details</li>
-    </ul>
+        <ul class="container--tabs">
+            <li class="tab tabs--active">Vessel Details</li>
+            <li class="tab">Voyage Details</li>
+            <li class="tab">Weather Details</li>
+            <li class="tab">Patient Details</li>
+        </ul>
 
-    <div class="container--content">
-        <div class="content content--active card">
-            @*<h1>This is tab 1</h1>*@
-            @*@Html.Partial("~/Views/MedicalAssistance/MediVac_VesselDeatils.cshtml")*@
-            @Html.Partial("_pvVesselDetails")
+        <div class="container--content">
+            <div class="content content--active card" id="vesselDetails">
+                @*<h1>This is tab 1</h1>*@
+                @*@Html.Partial("~/Views/MedicalAssistance/MediVac_VesselDeatils.cshtml")*@
+                @Html.Partial("_pvVesselDetails")
 
-
-        </div>
-
-        <div class="content">
-            @*<h1>This is tab 2</h1>*@
-            @*@Html.Partial("~/Views/MedicalAssistance/MediVac_VoyageDeatils.cshtml")*@
-
-            @Html.Partial("_pvVoyageDetails")
-        </div>
-
-        <div class="content">
-            @*<h1>This is tab 3</h1>*@
-            @Html.Partial("_pvWeatherDetails")
-        </div>
-
-        <div class="content">
-            @*<h1>This is tab 4</h1>*@
-            @Html.Partial("_pvPatientDetails")
-
-
-            <div class="row" style="border: 1px solid #eee; padding: 10px;">
-
-                <div class="col-md-4">
-                    <div class="col-md-3" style="padding: 10px; margin-top:68px;">
-                        <button type="button" class="button1" id="btnAdd" onclick="return SaveCIRM('Medivac');">Add</button>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label for="Email"></label>
-                        <input type="text" class="form-control" style="width:90%;" id="Email" placeholder="Enter the Email for Doctors / Hospitals" />
-                    </div>
-                    <button type="button" class="button1" id="" onclick="SendMail()">Send</button>
-                </div>
 
             </div>
-        </div>
 
-    </div>
+            <div class="content" id="voyageDetails">
+                @*<h1>This is tab 2</h1>*@
+                @*@Html.Partial("~/Views/MedicalAssistance/MediVac_VoyageDeatils.cshtml")*@
+
+                @Html.Partial("_pvVoyageDetails")
+            </div>
+
+            <div class="content" id="weatherDetails">
+                @*<h1>This is tab 3</h1>*@
+                @Html.Partial("_pvWeatherDetails")
+            </div>
+
+            <div class="content" id="patientDetails">
+                @*<h1>This is tab 4</h1>*@
+                @*@Html.Partial("_pvPatientDetails")*@
+                <div id="dvPatientDetailsPage1">
+                    @Html.Partial("_pvPatientDetails1")
+
+                </div>
+                <div id="dvPatientDetailsPage2" style="display:none">
+
+                    @Html.Partial("_pvPatientDetails2")
+                </div>
+
+
+                <div class="row" style="border: 1px solid #eee; padding: 10px;">
+
+                    <div class="col-md-4">
+                        <div class="col-md-3" style="padding: 10px; margin-top:68px;">
+                            <button type="button" class="button1" id="btnAdd" onclick="return SaveCIRMNew('Medivac');">Add</button>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label for="Email"></label>
+                            <input type="text" class="form-control" style="width:90%;" id="Email" placeholder="Enter the Email for Doctors / Hospitals" />
+                        </div>
+                        <button type="button" class="button1" id="" onclick="SendMail3()">Send</button>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
 </div>
 @section Scripts
 {
