--- a/TM.RestHour/Views/MedicalAssistance/TeleMedicine.cshtml
+++ b/TM.RestHour/Views/MedicalAssistance/TeleMedicine.cshtml
@@ -3,221 +3,189 @@
     ViewBag.Title = "TeleMedicine";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<script src="~/Scripts/VesselDetails.js"></script>
+<script src="~/Scripts/CIRM.js"></script>
 
-<h2>TeleMedicine</h2>
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="../css/bootstrap.min.css" />
+
+<!-- style CSS -->
+<link rel="stylesheet" href="../css/style.css" />
+<link rel="stylesheet" href="../css/colors/default.css" id="colorSkinCSS">
+
+<link href="~/Content/DataTables/css/jquery.dataTables.min.css" rel="stylesheet" />
+<link href="~/Content/DataTables/css/select.dataTables.min.css" rel="stylesheet" />
+<link href="~/Content/DataTables/css/rowReorder.dataTables.min.css" rel="stylesheet" />
+<link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
+<link href="dist/dual-listbox.css" rel="stylesheet">
+
+<link href="~/Content/themes/base/datepicker.css" rel="stylesheet" />
+<link href="~/Content/plugin/datepicker/datepicker.css" rel="stylesheet" />
+<link href="~/Content/plugin/datepicker/css/pickmeup.css" rel="stylesheet" />
+
+<script src="~/Scripts/jquery-3.6.0.min.js"></script>
+<script src="~/Scripts/notify.min.js"></script>
+
+<script src="~/Scripts/toastr.min.js"></script>
+<link href="~/Content/toastr.min.css" rel="stylesheet" />
+
+<script src="~/Scripts/jquery-ui-1.13.0.min.js"></script>
+<link href="~/Content/jquery-ui.css" rel="stylesheet" />
+@*<h2>TeleMedicine</h2>*@
 
 <div class="">
+    <div class="head_title">
+        <h1 class="ta">TeleMedicine</h1>
+        <input type="hidden" id="CIRMId" />
+        <input type="hidden" id="hdnPageName" value="TeleMedicine" />
+    </div>
     <ul class="container--tabs">
-        <li class="tab tabs--active">Tele Medic Details</li>
-        <li class="tab">Patient Deatils</li>
+        <li class="tab tabs--active">Vessel Details</li>
+        <li class="tab" style="display:none">Voyage Details</li>
+        <li class="tab" style="display:none">Weather Details</li>
+        <li class="tab">Patient Details</li>
     </ul>
 
     <div class="container--content">
-        <div class="content content--active card">
-            <form>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label>Placeholder</label>
-                            <input type="text" class="form-control" placeholder="Placeholder txt" />
-                        </div>
-
-                        <div class="form-group">
-                            <label>Placeholder</label>
-                            <input type="text" class="form-control" placeholder="Placeholder txt" />
-                        </div>
-                        <div class="form-group">
-                            <label>Placeholder</label>
-                            <input type="text" class="form-control" placeholder="Placeholder txt" />
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label>Placeholder</label>
-                            <input type="text" class="form-control" placeholder="Placeholder txt" />
-                        </div>
-
-                        <div class="form-group">
-                            <label>Placeholder</label>
-                            <input type="text" class="form-control" placeholder="Placeholder txt" />
-                        </div>
-                        <div class="form-group">
-                            <label>Placeholder</label>
-                            <input type="text" class="form-control" placeholder="Placeholder txt" />
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label>Placeholder</label>
-                            <input type="text" class="form-control" placeholder="Placeholder txt" />
-                        </div>
-
-                        <div class="form-group">
-                            <label>Placeholder</label>
-                            <input type="text" class="form-control" placeholder="Placeholder txt" />
-                        </div>
-                        <div class="form-group">
-                            <label>Placeholder</label>
-                            <input type="text" class="form-control" placeholder="Placeholder txt" />
-                        </div>
-                    </div>
-                    <div class="col-lg-12">
-                        <div class="add-btn">
-                            <button>Add</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-box">
-                    <div class="row">
-                        <div class="col-lg-3">
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="form-group">
-                                <label>Placeholder</label>
-
-                                <select class="form-control">
-                                    <option>select...</option>
-                                </select>
-                            </div>
-
-                            <div class="form-group">
-                                <label>Placeholder</label>
-                                <input type="text" class="form-control" placeholder="Placeholder txt" />
-                            </div>
-                            <div class="form-group">
-                                <label>Placeholder</label>
-                                <input type="text" class="form-control" placeholder="Placeholder txt" />
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="form-group">
-                                <label>Placeholder</label>
-                                <input type="text" class="form-control" placeholder="Placeholder txt" />
-                            </div>
-
-                            <div class="form-group">
-                                <label>Placeholder</label>
-                                <input type="text" class="form-control" placeholder="Placeholder txt" />
-                            </div>
-                            <div class="form-group">
-                                <label>Placeholder</label>
-                                <input type="text" class="form-control" placeholder="Placeholder txt" />
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="form-group">
-                                <label>Placeholder</label>
-                                <input type="text" class="form-control" placeholder="Placeholder txt" />
-                            </div>
-
-                            <div class="form-group">
-                                <label>Placeholder</label>
-                                <input type="text" class="form-control" placeholder="Placeholder txt" />
-                            </div>
-                            <div class="form-group">
-                                <label>Placeholder</label>
-                                <input type="text" class="form-control" placeholder="Placeholder txt" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-box">
-                    <h5>Type of Ailment</h5>
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <div class="form-group">
-                                <label>Placeholder</label>
-                                <select class="form-control">
-                                    <option>select...</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="form-group">
-                                <label>Placeholder</label>
-                                <input type="text" class="form-control" placeholder="Placeholder txt" />
-                            </div>
-                        </div>
+        <div class="content content--active card" id="vesselDetails">
+            @*<h1>This is tab 1</h1>*@
+            @*@Html.Partial("~/Views/MedicalAssistance/MediVac_VesselDeatils.cshtml")*@
+            @Html.Partial("_pvVesselDetails")
 
 
-                    </div>
-                </div>
-                <div class="card-box">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <h5>Type of Ailment</h5>
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="form-group">
-                                        <label>Placeholder</label>
-                                        <select class="form-control">
-                                            <option>select...</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="form-group">
-                                        <label>Placeholder</label>
-                                        <select class="form-control">
-                                            <option>select...</option>
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-                            </div>
-                        <div class="col-lg-6">
-                            <h5>Type of Ailment</h5>
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="form-group">
-                                        <label>Placeholder</label>
-                                        <select class="form-control">
-                                            <option>select...</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="form-group">
-                                        <label>Placeholder</label>
-                                        <select class="form-control">
-                                            <option>select...</option>
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-
-                    </div>
-                </div>
-            </form>
-            
         </div>
-        <div class="content">
-            <h1>This is tab 2</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur doloribus necessitatibus possimus. Sapiente aspernatur neque atque in eum tenetur id!</p>
+
+        <div class="content" id="voyageDetails">
+            @*<h1>This is tab 2</h1>*@
+            @*@Html.Partial("~/Views/MedicalAssistance/MediVac_VoyageDeatils.cshtml")*@
+
+            @Html.Partial("_pvVoyageDetails")
         </div>
-       
+
+        <div class="content" id="weatherDetails">
+            @*<h1>This is tab 3</h1>*@
+            @Html.Partial("_pvWeatherDetails")
+        </div>
+
+        <div class="content" id="patientDetails">
+            @*<h1>This is tab 4</h1>*@
+            @*@Html.Partial("_pvPatientDetails")*@
+            <div id="dvPatientDetailsPage1">
+                @Html.Partial("_pvPatientDetails1")
+
+            </div>
+            <div id="dvPatientDetailsPage2" style="display:none">
+
+                @Html.Partial("_pvPatientDetails2")
+            </div>
+
+
+            <div class="row" style="border: 1px solid #eee; padding: 10px;">
+
+                <div class="col-md-4">
+                    <div class="col-md-3" style="padding: 10px; margin-top:68px;">
+                        <button type="button" class="button1" id="btnAdd" onclick="return SaveCIRMNew('TeleMedicine');">Add</button>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="Email"></label>
+                        <input type="text" class="form-control" style="width:90%;" id="Email" placeholder="Enter the Email for Doctors / Hospitals" />
+                    </div>
+                    <button type="button" class="button1" id="" onclick="SendMail()">Send</button>
+                </div>
+
+            </div>
+        </div>
+
     </div>
 </div>
+@section Scripts
+{
 
-<script>
-    const tabs = document.querySelectorAll(".tab");
-    const contents = document.querySelectorAll(".content");
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jqueryui")
+    @Styles.Render("~/Content/themes/base/css")
+    <script>
+        const tabs = document.querySelectorAll(".tab");
+        const contents = document.querySelectorAll(".content");
 
-    for (let i = 0; i < tabs.length; i++) {
-        tabs[i].addEventListener("click", () => {
-            for (let j = 0; j < contents.length; j++) {
-                contents[j].classList.remove("content--active");
-            }
-            for (let jj = 0; jj < tabs.length; jj++) {
-                tabs[jj].classList.remove("tabs--active");
-            }
-            contents[i].classList.add("content--active");
-            tabs[i].classList.add("tabs--active");
+        for (let i = 0; i < tabs.length; i++) {
+            tabs[i].addEventListener("click", () => {
+                for (let j = 0; j < contents.length; j++) {
+                    contents[j].classList.remove("content--active");
+                }
+                for (let jj = 0; jj < tabs.length; jj++) {
+                    tabs[jj].classList.remove("tabs--active");
+                }
+                contents[i].classList.add("content--active");
+                tabs[i].classList.add("tabs--active");
+            });
+        }
+
+        $(document).ready(function () {
+
+            //-------Added On 4th Jan 2022-------------------------------
+            GetVesselTypeForDrp();
+            GetShip();
+            //$('#VesselTypeID').on('change', function () {
+            //    //alert($('option:selected', this).text());
+
+            //    var VesselTypeID = $('#VesselTypeID').val();
+            //    console.log('hi');
+            //    console.log(VesselTypeID);
+
+            //    GetVesselSubTypeByVesselTypeIDForDrp(VesselTypeID);
+            //});
+
+            //$('#VesselSubTypeID').on('change', function () {
+            //    //alert($('option:selected', this).text());
+
+            //    var VesselSubTypeID = $('#VesselSubTypeID').val();
+            //    //console.log('hi');
+            //    //console.log(VesselSubTypeID);
+
+            //    GetVesselSubSubTypeByVesselSubTypeIDForDrp(VesselSubTypeID);
+
+            //});
+            //----End---Added On 4th Jan 2022-------------------------------
+
+            //SetUpGrid();
+            //GetCrewForCIRMPatientDetails();
+
+            document.getElementById("Nationality").disabled = true;
+            document.getElementById("ddlRank").disabled = true;
+
+            $('#FrequencyOfVomiting').hide();
+            $('#FrequencyOfFits').hide();
+            $('#FrequencyOfGiddiness').hide();
+            $('#FrequencyOfLethargy').hide();
+
+            $('#btnUploadJoiningMedical').hide();
+            $('#btnMedicineAvailableOnBoard').hide();
+            $('#btnMedicalEquipmentOnBoard').hide();
+            $('#btnMedicalHistoryUpload').hide();
+            $('#btnWorkAndRestHourLatestRecord').hide();
+            $('#btnPreExistingMedicationPrescription').hide();
+            $('#btnUploadPistures').hide();
+
+            $("#Direction").attr("placeholder", "Direction N/A");
+            $("#BeaufortScale").attr("placeholder", "Beaufort Scale N/A");
+            $("#WindSpeed").attr("placeholder", "Wind Speed N/A");
+            $("#SeaState").attr("placeholder", "Sea State N/A");
+            $("#WaveHeight").attr("placeholder", "Wave Height N/A");
+            $("#Swell").attr("placeholder", "Swell N/A");
+            $("#Visibility").attr("placeholder", "Visibility N/A");
+
+            $('#dvCallSign').hide();
+            $('#dvLength').hide();
+            $('#dvPortOfRegistry').hide();
+            $('#dvBreadth').hide();
+            $('#dvHelicopterDeck').hide();
+            $('#dvHelicopterWinchingArea').hide();
         });
-    }
 
-</script>
+    </script>
+
+}
